make docker work for arm64

--- a/Dockerfile_ros1_20_04
+++ b/Dockerfile_ros1_20_04
@@ -1,4 +1,4 @@
-FROM osrf/ros:noetic-desktop-full
+FROM arm64v8/ros:noetic
 
 
 # Dependencies we use, catkin tools is very good build system
@@ -29,7 +29,7 @@ ADD . $WORKSPACE/src/kalibr
 # 	git clone https://github.com/ori-drs/kalibr.git
 
 RUN	cd $WORKSPACE &&\
-	catkin build -j$(nproc)
+	catkin build -j4
 
 
 # When a user runs a command we will run this code before theirs
