--- a/Dockerfile_ros1_20_04
+++ b/Dockerfile_ros1_20_04
@@ -14,6 +14,12 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive \
 	libpoco-dev libtbb-dev libblas-dev liblapack-dev libv4l-dev \
 	python3-catkin-tools python3-osrf-pycommon
 
+RUN apt-get update \
+    && apt-get install -q -y openssh-client \
+    && apt-get install -q -y python3-pip \
+    && apt-get install -q -y ros-noetic-cv-bridge \
+    && apt-get install -q -y python3-opencv
+ENV LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1
 
 # Create the workspace and build kalibr in it
 ENV WORKSPACE /catkin_ws
@@ -31,7 +37,6 @@ ADD . $WORKSPACE/src/kalibr
 RUN	cd $WORKSPACE &&\
 	catkin build -j4
 
-
 # When a user runs a command we will run this code before theirs
 # This will allow for using the manual focal length if it fails to init
 # https://github.com/ethz-asl/kalibr/pull/346
@@ -39,8 +44,4 @@ ENTRYPOINT export KALIBR_MANUAL_FOCAL_LENGTH_INIT=1 && \
 	# /bin/bash -c "source \"$WORKSPACE/devel/setup.bash\"" && \ 
 	cd $WORKSPACE && \
 	/bin/bash
-
-
-
-
 
