fixes of docker

--- a/Dockerfile_ros1_20_04
+++ b/Dockerfile_ros1_20_04
@@ -14,9 +14,11 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive \
 	libpoco-dev libtbb-dev libblas-dev liblapack-dev libv4l-dev \
 	python3-catkin-tools python3-osrf-pycommon
 
+RUN pip3 install tqdm
 
 # Create the workspace and build kalibr in it
 ENV WORKSPACE /catkin_ws
+ENV LD_PRELOAD /usr/lib/aarch64-linux-gnu/libgomp.so.1
 
 RUN mkdir -p $WORKSPACE/src && \
 	cd $WORKSPACE && \
@@ -31,8 +33,6 @@ ADD . $WORKSPACE/src/kalibr
 RUN	cd $WORKSPACE &&\
 	catkin build -j4
 
-RUN pip3 install tqdm
-ENV LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1
 
 # When a user runs a command we will run this code before theirs
 # This will allow for using the manual focal length if it fails to init
